--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "osu-tools"]
 	path = osu-tools
 	url = https://github.com/ppy/osu-tools
+[submodule "osutools"]
+	path = osutools
+	url = https://github.com/ppy/osu-tools
